<resources>
    <string name="app_name">Safearly</string>
    <string name="title_home">Beranda</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_activity">Aktivitas Pencegahan</string>
    <string name="title_notifications">Notifikasi</string>
    <string name="title_profile">profil pengguna</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="masuk_dengan_google">Masuk dengan Google</string>
    <string name="gradient">gradient</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="email_pengguna">emailpengguna@gmail.com</string>
    <string name="logout">Keluar</string>
    <string name="sheet_question">Sudah mengkonsumsi makanan sehat ?</string>
    <string name="add">Tambah</string>
    <string name="activity_label">Catatan aktivitas</string>
    <string name="activity_title">Cara mudah cegah alzheimer</string>
    <string name="activity_sub_title">Yuk, persiapkan masa tuamu dengan lebih bahagia tanpa alzheimer</string>
    <string name="home">Beranda</string>
    <string name="user_name">Hai nama pengguna</string>
    <string name="greeting">Bagaimana kabarmu?</string>
    <string name="card">card</string>
    <string name="card_main_text">Deteksi dini Alzheimer sekarang!</string>
    <string name="sec_text">Lebih mudah, cepat dan akurat</string>
    <string name="button_detect">Deteksi Sekarang</string>
</resources>