<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- App bar -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            style="@style/Widget.AppCompat.ActionBar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/appbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/home"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <!-- content -->
        <ImageView
            android:id="@+id/ava_home"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:src="@color/app_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <TextView
            android:id="@+id/hai_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/user_name"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <TextView
            android:id="@+id/greetings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/greeting"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hai_name" />

        <ImageView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greetings" />

        <TextView
            android:id="@+id/card_text_main"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/card_main_text"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/card"
            app:layout_constraintTop_toTopOf="@+id/card" />

        <TextView
            android:id="@+id/card_sec_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sec_text"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/card"
            app:layout_constraintTop_toBottomOf="@+id/card_text_main" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_detect"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_white"
            android:fontFamily="@font/poppins_semibold"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/button_detect"
            android:textAllCaps="false"
            android:textColor="@color/app_color"
            app:layout_constraintBottom_toBottomOf="@+id/card"
            app:layout_constraintEnd_toEndOf="@+id/card" />

        <TextView
            android:id="@+id/title_FYI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="Yang perlu kamu ketahui"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
