<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/gradient_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/gradient"
        android:src="@drawable/ic_gradient_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="174dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_card_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:src="@color/app_color"
        app:layout_constraintStart_toStartOf="@+id/card"
        app:layout_constraintTop_toTopOf="@+id/card" />

    <TextView
        android:id="@+id/name"
        android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:maxLines="1"
        android:text="@string/nama_pengguna"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/card" />

    <TextView
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/email_pengguna"
        android:fontFamily="@font/poppins_medium"
        android:textSize="12sp"
        android:maxLines="1"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <Button
        android:id="@+id/btn_logout"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="194dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/button_blue"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/card"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/button_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card" />
</androidx.constraintlayout.widget.ConstraintLayout>